--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,13 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply from: rootProject.file("gradle_support/spring-boot.gradle")
 
+dependencies {
+	compile("org.springframework.kafka:spring-kafka")
+	compile("org.apache.commons:commons-math3:3.6.1")
+
+	testCompile("org.springframework.kafka:spring-kafka-test")
+}
+
 
 group = 'com.birse'
 version = '0.0.1-SNAPSHOT'
